
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JUN 30a
  * in model/chem/_C2H4_Air_23s/chem.hh and model/chem/_C2H4_Air_Plasma_36s/chem.hh
    - mapped SMAP_CHO to SMAP_HCO
    - mapped SMAP_CH2O to SMAP_HCHO
  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c and 
    model/transport/_Dixon-Lewis/transport.c, model/thermo/_generic/thermo.hh
    - renamed species CHO to HCO
    - renamed species CH2O to HCHO
    - got rid of the second species HCO (redundant)


2023 JUN 29a
  * in model/emfield/_test/emfield.c
    - in find_linearization_coefficients_inner_node_emfield(), fixed a bug: a "-=" operator
      should rather be a "+=" operator


2023 JUN 28a
  * in model/emfield/_Epotential/emfield.c
    - changed the function find_linearization_coefficients_inner_node_emfield() so that it uses
      _sigma_interface() instead of calculating it from the mobilities; this fixes a bug when
      the emfield cut is not at the same location as the fluid cut
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_linearization_coefficients_inner_node_emfield_DELTAVK(), fixed a bug: a "-=" operator
      should rather be a "+=" operator
       

2023 JUN 27a
  * in cycle/tsemf/_GS/tsemf.c
    - renamed np->bs->tsemfcoeff used by SOR2 to np->bs->tsemfcoeff2 because tsemfcoeff is used 
      by SOR
  * in model/emfield/_Epotential*/emfield.hh
    - added #define EMFIELD_SHARE
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template(), added gammaeminus to the All(BDRY_WALLTFIXED1) template
  * in model/share/emfield_share.c
    - changed #ifdef EMFIELD to #ifdef EMFIELD_SHARE
  * in model/emfield
    - added _test emfield method that can be used with the non-plasma fluid modules
    
