@@ -1959,7 +1959,6 @@ void add_to_dW_fw_2r3p_Lindemann(int specR1, int specR2,
                                  spec_t dWdT, spec2_t dWdrhok){
 									 
   double kf,sum, k0, kinf, dkfdT, dk0dT, dkinfdT, dkfdX2;
-
   if (A0 > 0.0 || Ainf > 0.0) {
     k0  = A0*pow(T,n0)*exp(-E0/(T*Rchem));    /*  cm^3 (mole s)^(-1) */
     kinf = Ainf*pow(T,ninf)*exp(-Einf/(T*Rchem)); /* s^(-1)  */ 
@@ -1967,13 +1966,18 @@ void add_to_dW_fw_2r3p_Lindemann(int specR1, int specR2,
   
   // dWdT 
     
+    
     dk0dT  = k0*n0/T + k0*(E0/(sqr(T)*Rchem));
     dkinfdT = kinf*ninf/T + kinf*(Einf/(sqr(T)*Rchem));
-  
-    dkfdX2 = -(k0 * k0 * kinf) / sqr(kinf + k0*X[specR2]); /*  cm^6 (mole^2 s)^(-1)   */ 
- 
-    dkfdT = kinf*dk0dT / ( kinf + k0*X[specR2] ) - k0 * ( X[specR2]*kinf*dk0dT - X[specR2]*k0*dkinfdT ) / sqr(kinf + k0*X[specR2]);
-
+    
+    //{Original Equations -- gave a NaN for very low temperatures}
+    //dkfdX2 = -(k0 * k0 * kinf) / sqr(kinf + k0*X[specR2]); /*  cm^6 (mole^2 s)^(-1)   */ 
+    //dkfdT = kinf*dk0dT / ( kinf + k0*X[specR2] ) - k0 * ( X[specR2]*kinf*dk0dT - X[specR2]*k0*dkinfdT ) / sqr(kinf + k0*X[specR2]);
+    
+    //{Updated Equations}
+    dkfdX2 = -(k0 * k0) / (kinf + k0*X[specR2]) / (kinf + k0*X[specR2]) * kinf; /*  cm^6 (mole^2 s)^(-1)   */   
+    dkfdT = kinf*dk0dT / ( kinf + k0*X[specR2] ) - (k0 / (kinf + k0*X[specR2]) / (kinf + k0*X[specR2])) * ( X[specR2]*kinf*dk0dT - X[specR2]*k0*dkinfdT );
+    
   } else {
     kf = 0.0; 
     dkfdT = 0.0; 
@@ -2007,7 +2011,8 @@ void add_to_dW_fw_2r3p_Lindemann(int specR1, int specR2,
   // dW[specP3]dX 
   dWdrhok[specP3][specR1]+=_calM(specP3)/_calM(specR1)*kf*X[specR2];
   dWdrhok[specP3][specR2]+=_calM(specP3)/_calM(specR2)*kf*X[specR1] + _calM(specP3)/_calM(specR2) * sum * dkfdX2;
-  
+ 
+    
 }
 
 /*
@@ -2364,18 +2369,22 @@ void add_to_dW_fw_3r2p_Lindemann(int specR1, int specR2, int specR3,
                                  spec_t dWdT, spec2_t dWdrhok){
 									 
   double kf, sum, k0, kinf, dkfdT, dk0dT, dkinfdT, dkfdX3;
-
   if (A0 > 0.0 || Ainf > 0.0) {
     k0  = A0*pow(T,n0)*exp(-E0/(T*Rchem));    /* cm^6 mole^(-2) s^(-1) */ 
     kinf = Ainf*pow(T,ninf)*exp(-Einf/(T*Rchem));  /*  cm^3 (mole s)^(-1)   */ 
     kf = k0*kinf/(kinf + k0*X[specR3]);  /* cm^6 mole^(-2) s^(-1) */
-
+    
     dk0dT  = k0*n0/T + k0*(E0/(sqr(T)*Rchem));
     dkinfdT = kinf*ninf/T + kinf*(Einf/(sqr(T)*Rchem));
-  
-    dkfdX3 = -(k0 * k0 * kinf) / sqr(kinf + k0*X[specR3]); /*  cm^6 (mole^2 s)^(-1)   */ 
- 
-    dkfdT = kinf*dk0dT / ( kinf + k0*X[specR3] ) - k0 * ( X[specR3]*kinf*dk0dT - X[specR3]*k0*dkinfdT ) / sqr(kinf + k0*X[specR3]);
+    
+    //{Original Equations - gave a NaN at low temperatures}
+    //dkfdX3 = -(k0 * k0 * kinf) / sqr(kinf + k0*X[specR3]); /*  cm^6 (mole^2 s)^(-1)   */ 
+    //dkfdT = kinf*dk0dT / ( kinf + k0*X[specR3] ) - k0 * ( X[specR3]*kinf*dk0dT - X[specR3]*k0*dkinfdT ) / sqr(kinf + k0*X[specR3]);
+    
+    //{Updated Equations}
+    dkfdX3 = -(k0 * k0) / (kinf + k0*X[specR3]) / (kinf + k0*X[specR3]) * kinf; /*  cm^6 (mole^2 s)^(-1)   */   
+    dkfdT = kinf*dk0dT / ( kinf + k0*X[specR3] ) - (k0 / (kinf + k0*X[specR3]) / (kinf + k0*X[specR3])) * ( X[specR3]*kinf*dk0dT - X[specR3]*k0*dkinfdT );
+    
     
     
   } else {
